# MeetingMinutesTaker

./: .gitignore  CLA.md  COMMERCIAL.md  CONTRIBUTING.md  README.md  install.sh  pyproject.toml  uninstall.sh
.claude/: launch.json
.kiro/specs/meeting-minutes-taker/: design.md  requirements.md  tasks.md
alembic/: alembic.ini  env.py
alembic/versions/: 001_initial_schema.py  002_structured_minutes.py  003_pipeline_stages.py  004_voice_samples.py  005_meeting_series.py  006_action_proposal_state.py  007_attachments.py  008_meeting_briefs.py
config/: config.yaml  custom_models.json
docs/: SECURITY.md  USER_GUIDE.md
specs/: 00-architecture.md  01-recording-and-transcription.md  02-minutes-generation.md  03-storage-and-search.md  04-web-ui.md  05-future-roadmap.md  06-implementation-plan-batch2.md  07-implementation-plan-batch3.md  08-change-meeting-type.md  09-attachments.md  10-meeting-prep-brief.md
src/meeting_minutes/: __init__.py  _quiet_objc.py  action_review.py  analytics.py  backup.py  chat.py  config.py  doctor.py  embeddings.py  encryption.py  env.py  external_notes.py  hardware.py  health.py  logging.py  meeting_type_change.py  models.py  notifications.py  obsidian.py  pipeline.py  pipeline_state.py  regen.py  retention.py  stats_analytics.py
src/meeting_minutes/api/: __init__.py  deps.py  main.py  model_fetcher.py  rate_limit.py  schemas.py  secrets.py  ws.py  ws_tokens.py
src/meeting_minutes/api/routes/: actions.py  attachments.py  backup.py  brief.py  brief_cache.py  brief_export.py  brief_focus.py  brief_talking_points.py  chat.py  config.py  decisions.py  doctor.py  health.py  meetings.py  people.py  pipeline.py  recording.py  retention.py  search.py  security.py  series.py  stats.py  templates.py  upload.py
src/meeting_minutes/attachments/: __init__.py  extractors.py  pipeline_integration.py  sidecar.py  storage.py  summarizer.py  worker.py
src/meeting_minutes/export/: __init__.py  bundle.py  docx.py  pdf.py
src/meeting_minutes/system1/: __init__.py  capture.py  diarize.py  output.py  speaker_identity.py  transcribe.py
src/meeting_minutes/system1/diarization_backends/: __init__.py  base.py  pyannote_ai.py  pyannote_local.py  pyannote_mlx.py
src/meeting_minutes/system2/: __init__.py  ingest.py  llm_client.py  output.py  parser.py  prompts.py  quality.py  router.py  schema.py  speaker_rename.py  transcript_parser.py
src/meeting_minutes/system3/: __init__.py  cli.py  db.py  ingest.py  search.py  series.py  storage.py
templates/: _shared.md.j2  architecture_review.md.j2  board_meeting.md.j2  brainstorm.md.j2  customer_meeting.md.j2  decision_meeting.md.j2  general.md.j2  incident_review.md.j2  interview_debrief.md.j2  leadership_meeting.md.j2  one_on_one.md.j2  one_on_one_direct_report.md.j2  one_on_one_leader.md.j2  one_on_one_peer.md.j2  planning.md.j2  retrospective.md.j2  standup.md.j2  team_meeting.md.j2  vendor_meeting.md.j2
templates/export/: pdf.css
tests/: conftest.py  strategies.py  test_api_secrets.py  test_attachments.py  test_brief.py  test_brief_brf2.py  test_config.py  test_disk_preflight.py  test_doctor.py  test_export_docx.py  test_export_pdf.py  test_health.py  test_logging.py  test_notifications.py  test_pipeline.py  test_pipeline_resume.py  test_pipeline_speaker_identity.py  test_pipeline_state.py  test_recording_race.py  test_retention.py  test_series.py  test_speaker_identity.py  test_stats_commitments.py  test_stats_effectiveness.py  test_stats_sentiment.py  test_stats_unresolved_topics.py
tests/test_system1/: test_capture.py  test_diarization_backends.py  test_diarize.py  test_output.py  test_transcribe.py
tests/test_system2/: test_ingest.py  test_output.py  test_parser.py  test_prompts.py  test_quality.py  test_router.py  test_structured.py
tests/test_system3/: test_cli.py  test_ingest.py  test_search.py  test_storage.py
web/: package.json  tailwind.config.js  vite.config.js
web/src/: app.css  app.html
web/src/lib/: api.js  meetingTypes.js
web/src/lib/components/: ActionItemRow.svelte  AttachmentsPanel.svelte  AudioPlayer.svelte  CalendarMonth.svelte  ConfirmModal.svelte  DayMeetingList.svelte  DecisionCard.svelte  EmptyState.svelte  ExportMenu.svelte  MarkdownRenderer.svelte  MeetingCard.svelte  MeetingDetail.svelte  MeetingTypeBadge.svelte  PersonAvatar.svelte  SearchBar.svelte  Skeleton.svelte  StatusStepper.svelte  TagEditor.svelte  Toast.svelte  UploadModal.svelte
web/src/lib/stores/: recording.js  theme.js  toasts.js
web/src/routes/: +layout.svelte  +page.svelte
web/src/routes/actions/: +page.svelte
web/src/routes/brief/: +page.svelte
web/src/routes/chat/: +page.svelte
web/src/routes/decisions/: +page.svelte
web/src/routes/meeting/[id]/: +page.svelte
web/src/routes/onboarding/: +page.svelte
web/src/routes/people/: +page.svelte
web/src/routes/people/[id]/: +page.svelte
web/src/routes/record/: +page.svelte
web/src/routes/series/: +page.svelte
web/src/routes/series/[id]/: +page.svelte
web/src/routes/settings/: +page.svelte
web/src/routes/stats/: +page.svelte
web/src/routes/templates/: +page.svelte
