[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "meeting-minutes"
version = "0.1.0"
requires-python = ">=3.11"
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]
dependencies = [
    "sounddevice>=0.4.6",
    "soundfile>=0.12.1",
    "faster-whisper>=1.0.0",
    "pyannote.audio>=3.1.0",
    "torchcodec>=0.1.0",  # Required by pyannote.audio 3.3+ for audio decoding (needs ffmpeg)
    "anthropic>=0.40.0",
    "openai>=1.0.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "jinja2>=3.1.0",
    "pydantic>=2.0",
    "watchdog>=4.0.0",
    "numpy>=1.26.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.7",
    "cryptography>=42.0.0",
    "httpx>=0.27.0",
    "sentence-transformers>=2.7.0",  # Local embedding model for semantic search
    "sqlite-vec>=0.1.1",  # Vector search extension for SQLite
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "hypothesis>=6.100.0",
]
local-ai = [
    "pywhispercpp>=1.2.0",  # whisper.cpp transcription engine
    "psutil>=5.9.0",        # hardware detection (RAM, etc.)
]

[project.scripts]
mm = "meeting_minutes.system3.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/meeting_minutes"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
