[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "meeting-minutes"
version = "0.1.0"
requires-python = ">=3.11"
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]
dependencies = [
    "sounddevice>=0.4.6",
    "soundfile>=0.12.1",
    "faster-whisper>=1.0.0",
    "pyannote.audio>=4.0.0",  # 4.x exposes per-cluster speaker_embeddings needed for cross-meeting speaker ID
    "torchcodec>=0.1.0",  # Required by pyannote.audio 3.3+ for audio decoding (needs ffmpeg)
    "anthropic>=0.40.0",
    "openai>=1.0.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "jinja2>=3.1.0",
    "pydantic>=2.0",
    "watchdog>=4.0.0",
    "numpy>=1.26.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.7",
    "cryptography>=42.0.0",
    "httpx>=0.27.0",
    "sentence-transformers>=2.7.0",  # Local embedding model for semantic search
    "sqlite-vec>=0.1.1",  # Vector search extension for SQLite
    "markdown-it-py>=3.0.0",  # Markdown parser (EXP-1 PDF rendering)
    "weasyprint>=60.0",  # HTML -> PDF (EXP-1)
    "python-docx>=1.1.0",  # DOCX composition (EXP-1)
    "pync>=2.0.3; sys_platform == 'darwin'",  # macOS desktop notifications (NOT-1)
    "pypdf>=4.0.0",  # PDF text-layer extraction for attachments (spec/09)
    "python-pptx>=0.6.23",  # PPTX extraction for attachments (spec/09)
    "pytesseract>=0.3.10",  # OCR wrapper for image attachments (spec/09)
    "Pillow>=10.0.0",  # Image loading for OCR (spec/09); transitive for many already
    "pdf2image>=1.17.0",  # Render PDF pages → images for scanned-PDF OCR fallback (spec/09)
    "pillow-heif>=0.16.0",  # HEIC support for iPhone screenshot attachments (spec/09)
    "trafilatura>=1.8.0",  # Readable-text extraction from links (spec/09)
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "hypothesis>=6.100.0",
]
local-ai = [
    "pywhispercpp>=1.2.0",  # whisper.cpp transcription engine
    "psutil>=5.9.0",        # hardware detection (RAM, etc.)
]
# Cloud diarization via the pyannoteAI hosted API (engine: pyannote-ai).
# Install with: pip install -e '.[diarize-cloud]'
diarize-cloud = [
    "pyannoteai-sdk>=0.4.0",
]
# MLX-accelerated local diarization for Apple Silicon (engine: pyannote-mlx).
# Install with: pip install -e '.[diarize-mlx]'  (Apple Silicon only)
diarize-mlx = [
    "mlx>=0.20.0",
]

[project.scripts]
mm = "meeting_minutes.system3.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/meeting_minutes"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
